Add new files and update existing files

--- a/backend/src/infrastructure/service/mail/verification_template.handlebars
+++ b/backend/src/infrastructure/service/mail/verification_template.handlebars
@@ -82,7 +82,7 @@
 
     <!-- Main Content Section -->
     <div style="text-align: left; padding: 0 40px;">
-      <h1 class="welcome-message">Hi {{name}}!<br>Thank you for signing up and welcome to Dalali Hub</h1>
+      <h1 class="welcome-message">Hi {{name}}!<br>Welcome to Dalali Hub</h1>
       <p class="main-content">
         Discover your dream home with Dalali Hub! We offer an extensive range of properties tailored to your needs. Whether you're searching for a cozy apartment, a spacious villa, or a commercial space, we've got you covered. Our user-friendly platform simplifies the search process, providing detailed listings, virtual tours, and expert guidance to make your real estate journey seamless.
       </p>
